<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#def8f7"
    tools:context=".signup">


    <include
        android:id="@+id/container_header_lyt"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        layout="@layout/background_circles"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="65dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="94dp"
        android:fontFamily="@font/sovbaregular"
        android:text="@string/mentor"
        android:textColor="#289fa5"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="94dp"
        android:fontFamily="@font/sovbaregular"
        android:text="@string/me"
        android:textColor="#fec90b"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corner_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="168dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <EditText
            android:id="@id/textView10"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:hint="@string/enter_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView10" />

        <EditText
            android:id="@id/textView14"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/contact_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView14" />

        <EditText
            android:id="@id/textView16"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:hint="@string/enter_contact_number"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/country"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView16" />


        <Spinner
            android:id="@+id/spinner"
            android:theme="@style/mySpinnerItemStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/dropdown_bg"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:entries="@array/country_items"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView17">

        </Spinner>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/city"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner" />


        <Spinner
            android:id="@+id/spinner1"
            android:theme="@style/mySpinnerItemStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/dropdown_bg"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:entries="@array/city_items"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView18">

        </Spinner>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner1" />

        <EditText
            android:id="@+id/editTextPassword1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />


        <TextView
            android:id="@+id/textView20"
            android:layout_width="245dp"
            android:layout_height="18dp"
            android:layout_marginTop="5dp"
            android:text="@string/password_must_be_8_characters_long"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/sign_up"
            android:textColor="@color/rounded_corner_bg_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword1" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            android:linksClickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"/>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="15dp"
            android:linksClickable="true"
            app:layout_constraintStart_toEndOf="@id/textView21"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>