<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#def8f7"
    tools:context=".MainActivity">



    <include
        android:id="@+id/container_header_lyt"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        layout="@layout/background_circles"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="332dp"
        android:fontFamily="@font/sovbaregular"
        android:text="@string/mentor"
        android:textColor="#289fa5"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:fontFamily="@font/sovbaregular"
        android:text="@string/me"
        android:textColor="#fec90b"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="179dp"
        android:layout_height="30dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="388dp"
        android:text="@string/connect_ask_learn"
        android:textColor="#237a7f"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>